chess/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chess
  namespace: apps
  labels:
    app: chess
    rel: stable
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chess
  template:
    metadata:
      labels:
        app: chess
        rel: stable
    spec:
      serviceAccountName: chess-sa
      containers:
        - name: chess
          image: diderikk/chess:v1.2.0@sha256:3fcd49fef8bedca5da9ae05c0f5cf25cb7a1fc45aaee015a9e376ccf4c042b6c
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: "256Mi"
              cpu: "100m"
          ports:
            - containerPort: 4000
          livenessProbe:
            httpGet:
              path: /api/hello/live
              port: 4000
            initialDelaySeconds: 20
            periodSeconds: 1800
            failureThreshold: 2
