chess/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chess-service
  namespace: apps
  labels:
    app: chess
spec:
  sessionAffinity: ClientIP
  type: ClusterIP
  ports:
    - port: 4000
  selector:
    app: chess
